Bug 138899 - FILEOPEN DOCX Extra paragraph after change tracked paragraph+section break
Summary: FILEOPEN DOCX Extra paragraph after change tracked paragraph+section break
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.1
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2020-12-14 14:44 UTC by NISZ LibreOffice Team
Modified: 2021-01-25 09:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (22.18 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-12-14 14:44 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (72.83 KB, image/png)
2020-12-14 14:44 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-12-14 14:44:00 UTC
Created attachment 168152 [details]
Example file from Word

Attached user-made document contains some change tracked numbered paragraph that is followed by a continuous section break, then two bulleted paragraphs.
When opened in Writer, the section break is followed by an extra empty paragraph with bulleting.

Steps to reproduce:
    1. Open attached document

Actual results:
Extra bulleted paragraph.

Expected results:
No extra paragraph.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 368c56144aab5794c39d5bc2082d9b3d6d7cebdb
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Version: 6.4.0.3 (x86)
Build ID: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc: CL

Not yet in:
Version: 6.3.0.4 (x86)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Additional Information: 
Bibisected using bibisect-win64-6.4 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=39090afac268f9ae985832c2f08863b41e6c06f2
author	László Németh <nemeth@numbertext.org>	2019-10-09 14:54:03 +0200
committer	László Németh <nemeth@numbertext.org>	2019-10-09 19:48:09 +0200

tdf#120336 DOCX import: fix page break after tracked deletion

Adding CC to: Laszlo Nemeth
Comment 1 NISZ LibreOffice Team 2020-12-14 14:44:23 UTC
Created attachment 168153 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Xisco Faulí 2020-12-14 15:07:00 UTC
Reproduced in

Version: 7.1.0.0.alpha1+
Build ID: 738bcf5e9a8c443d60c29c3a8068e8c16c72638a
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2021-01-22 14:07:19 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b7ca9576c26ed258537134c0cf2944cfcfc65f2e

tdf#138899 DOCX import: fix removing last para of section

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2021-01-25 09:07:05 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 0426748927919dbfd4cf5c0bb904e21a90d6c9d7
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!!
Comment 5 Commit Notification 2021-01-25 09:10:35 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/6de15a8d094b7eca68eab5341d5a55744154114e

tdf#138899 DOCX import: fix removing last para of section

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.