tdf#138899 DOCX import: fix removing last para of section

Fix regression from commit 39090afac268f9ae985832c2f08863b41e6c06f2
(tdf#120336 DOCX import: fix page break after tracked deletion),
limiting the condition only for *empty* section starting
paragraphs with tracked deletion.

Change-Id: I020c8b0edf5d4a37a9150cccec8c25fce50327d3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109779
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit b7ca9576c26ed258537134c0cf2944cfcfc65f2e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109799
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>